# weather

./: Cargo.toml
migrations/2020-09-08-114639_temperatures/: down.sql  up.sql
migrations/2020-09-09-170909_temperature/: up.sql
migrations/2020-09-10-161539_temperature_mig/: up.sql
migrations/2020-09-27-114640_temperatures_mig/: down.sql  up.sql
migrations/2020-10-07-110314_temperatures_mig/: down.sql  up.sql
src/: accuweather_json.rs  calculations.rs  database_stuff.rs  json_structs.rs  lib.rs  main.rs  menu.rs  models.rs  schema.rs  weatherbit_json.rs
src/apis/: accuweather_json.rs  mod.rs  weatherbit_json.rs
