[package]
name = "weather"
version = "0.1.0"
authors = ["grode <dimitris23bp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For arguments
structopt = "0.3.17"

# For getting the JSON from the API
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }

# For deserialization of JSON
serde = { version = "1.0.115", features = ["derive"] }