[package]
name = "weather"
version = "1.0.0"
authors = ["grode <dimitris23bp@gmail.com>"]
edition = "2018"

# Specifies a C-dynamic library to link against
[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# For getting the JSON from the API
reqwest = { version = "0.10", features = ["json"] }

# For deserialization of JSON
serde = { version = "1.0.115", features = ["derive"] }

# For database
diesel = { version = "1.4.5", features = ["mysql"] }
dotenv = "0.15.0"

# Arguments
structopt = "0.3.17"

# For current date
chrono = "0.4"

# WebAssembly
wasm-bindgen = "0.2.68"
