[package]
name = "weather"
version = "1.0.0"
authors = ["grode <dimitris23bp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
# For getting the JSON from the API
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }

# For deserialization of JSON
serde = { version = "1.0.115", features = ["derive"] }

# For database
diesel = { version = "1.4.5", features = ["mysql"] }
dotenv = "0.15.0"

# Arguments
structopt = "0.3.17"

# For current date
chrono = "0.4"
